--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<!-- B612 font (logo) -->
 		<link
-			href="https://fonts.googleapis.com/css2?family=B612+Mono:wght@700&display=block"
+			href="https://fonts.googleapis.com/css2?family=B612:wght@700&family=Roboto:wght@100&display=swap"
 			rel="stylesheet"
 		/>
 
